# 6mlet-tech-challenge-01

./: .dockerignore  .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  improvement.yml  task.md  task.yml
.github/workflows/: branch-protection.yml  ci.yml  deploy.yml  docker-build-push.yml  pr-build-test.yml
app/: __init__.py  main.py  utils.py
app/api/: __init__.py  books.py  categories.py  category_stats.py  core.py  health.py  main.py  overview_stats.py  scraping.py
app/data/: __init__.py  csv_loader.py  data_cache.py  data_service.py  data_validator.py
app/ml/: .gitignore  README.md  __init__.py  feature_engineering.py  models.py  prediction_service.py  train_model.py  training_data.py
app/models/: __init__.py  book.py  category.py  category_stats.py  execution_history_item.py  health_response.py  history_response.py  overview_stats.py  scraping_request.py  scraping_response.py  status_response.py
assets/: tech_challenge_fase_1.md
data/: sample_books_data.csv
infra/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.prod.yml  docker-compose.yml  docker-manage.sh  validate-setup.sh
scripts/: README.md  __init__.py  book_sequence.py  books_scraper.py  config.py  history_logger.py  run_scraper.py  scraper_api.py  view_history.py
tests/: test_books.py  test_books_scraper.py  test_categories.py  test_category_stats.py  test_data_layer.py  test_health_endpoint.py  test_main.py  test_overview_stats.py  test_overview_stats_integration.py  test_scraper_api.py  test_top_rated_books.py
tests/http-request/: books.http  categories.http  core.http  http-client.env.json  machine-learning.http  scraping.http  statistics.http
